Finalize project hardening and cleanup